tests/baselines/reference/awaitBindingElement13.errors.txt
tests/cases/conformance/async/downlevel/awaitBindingElement/awaitBindingElement13.ts(12,31): error TS2304: Cannot find name 'await'.
tests/cases/conformance/async/downlevel/awaitBindingElement/awaitBindingElement13.ts(12,37): error TS1005: ',' expected.


==== tests/cases/conformance/async/downlevel/awaitBindingElement/awaitBindingElement13.ts (2 errors) ====
    declare class Promise<T> {
        constructor(init: (resolve: (value?: T | IPromise<T>) => void, reject: (reason?: any) => void) => void);
        then<TResult>(onfulfilled?: (value: T) => TResult | IPromise<TResult>, onrejected?: (reason: any) => TResult | IPromise<TResult>): Promise<TResult>;
    }
    declare var a: number;
    declare var o: { x: number; };
    declare var aro: { x: number; }[];
    declare var ar: number[];
    declare var pa: Promise<number>;
    declare var po: Promise<{x: number;}>;
    declare var paro: Promise<{x:number;}[]>;
    async function func([{ x }] = await paro): Promise<void> {
                                  ~~~~~
!!! error TS2304: Cannot find name 'await'.
                                        ~~~~
!!! error TS1005: ',' expected.
    }
    